--- a/molecule/default/ssh_config.j2
+++ b/molecule/default/ssh_config.j2
@@ -2,5 +2,5 @@
 Host {{ host.hcloud_server.name }}
     HostName {{ host.hcloud_server.ipv4_address }}
     User root
-    IdentityFile ~/.ssh/molecule_rsa
+    IdentityFile ~/.ssh/molecule
 {% endfor %}
